--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -13,9 +13,9 @@
     <name>spl-net</name>
     <dependencies>
         <dependency>
-            <groupId>com.stanfy</groupId>
-            <artifactId>gson-xml-java</artifactId>
-            <version>0.1.7</version>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
         </dependency>
     </dependencies>
 </project>
