--- a/ClientClion/CMakeLists.txt
+++ b/ClientClion/CMakeLists.txt
@@ -1,11 +1,6 @@
 cmake_minimum_required(VERSION 3.8)
 project(Client)
-
-set(BOOST_ROOT "/usr/include")
-FIND_PACKAGE(Boost 1.57.0)
-if (NOT Boost_FOUND)
-    message(FARAL_ERROR "Could not find boost")
-endif()
+set(CMAKE_CXX_STANDARD 11)
 set(SOURCE_FILES
         include/connectionHandler.h
         src/connectionHandler.cpp
